--- a/proto-back/src/main/resources/application.properties
+++ b/proto-back/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=toto
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=8081
