Nettoyage du dépôt : ajout gitignore et suppression des fichiers générés

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 # Postgres DataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/esiag_proto
-spring.datasource.username=toto
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=postgres
 spring.datasource.password=toto
 
 ## JPA/Hibernate
