--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+
 # DATABASE CONF
 
 # Postgres DataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.url=jdbc:postgresql://localhost:5432/esiag_proto
 spring.datasource.username=postgres
-spring.datasource.password=toto
+spring.datasource.password=rrwtrrwt
 
 ## JPA/Hibernate
 spring.jpa.show-sql=false
