--- a/back/pom.xml
+++ b/back/pom.xml
@@ -66,6 +66,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <profiles>
+      <profile>
+        <id>maxdev</id>
+        <properties>
+          <datasource.username>postgres</datasource.username>
+          <db.url>jdbc:postgresql://localhost:5432/test</db.url>
+          <db.password>toto</db.password>
+        </properties>
+      </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -80,6 +92,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>3.2.0</version>
+              <configuration>
+                <useDefaultDelimiters>true</useDefaultDelimiters>
+              </configuration>
+            </plugin>
         </plugins>
     </build>
+
+  
 </project>
