--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 
 # Postgres DataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=postgres
-spring.datasource.password=toto
+spring.datasource.url=${db.url}
+spring.datasource.username=${datasource.username}
+spring.datasource.password=${db.password}
 
 ## JPA/Hibernate
 spring.jpa.show-sql=false
