Ajout d'un profil de prod dans le fichier pom.xml pour configurer les propriétés de la base de données.

--- a/back/pom.xml
+++ b/back/pom.xml
@@ -76,6 +76,14 @@
           <db.password>toto</db.password>
         </properties>
       </profile>
+      <profile>
+        <id>prod</id>
+        <properties>
+          <datasource.username>toto</datasource.username>
+          <db.url>jdbc:postgresql://localhost:5432/clinicpro_db</db.url>
+          <db.password>toto</db.password>
+        </properties>
+      </profile>
     </profiles>
 
     <build>
