--- a/back/pom.xml
+++ b/back/pom.xml
@@ -66,6 +66,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <id>shaindev</id>
+      <properties>
+        <datasource.username>postgres</datasource.username>
+        <db.url>jdbc:postgresql://localhost:5432/esiag_proto</db.url>
+        <db.password>admin</db.password>
+      </properties>
+    </profile>
+  </profiles>
     <build>
         <plugins>
             <plugin>
@@ -80,6 +90,15 @@
                     </execution>
                 </executions>
             </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+              <useDefaultDelimiters>true</useDefaultDelimiters>
+            </configuration>
+          </plugin>
+
         </plugins>
     </build>
 </project>
